# survail

./: .env.example  .gitignore  PRD.md  README.md  check.sh  dev.sh  docker-compose.yml  embed.sh  langgraph.json  otel-collector-config.yaml  pyproject.toml  pytest.ini  setup.sh  todo.md  todo_fe_linting.md
api/: .env.example  Dockerfile  EMBEDDINGS.md  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260608_0001_initial_schema.py  20260609_0002_strict_deckbuilder.py  20260609_0003_card_catalog.py  20260609_0004_deck_operations.py  20260609_0005_soft_delete_decks.py  20260609_0006_oracle_embeddings.py  20260609_0007_catalog_printing_resolution.py  20260609_0008_backfill_embedding_source_hashes.py  20260609_0009_cardset_tags.py  20260609_0010_catalog_marketplace_prices.py  20260609_0011_permanent_deck_deletion.py  20260610_0012_deck_agent.py  20260611_0013_deck_generated_description_revision.py  20260611_0014_goal_rubric_scores.py  20260612_0015_role_evaluations.py  20260612_0016_embedding_hnsw_index.py  20260612_0017_concise_role_evaluations.py  20260614_0018_core_card_context_cache.py  20260614_0019_repair_core_context_schema.py  20260619_0020_drop_stored_role_overall_score.py  20260620_0021_cardset_notes.py  20260621_0022_role_annotation_portal.py  20260716_0023_drop_role_annotation_portal.py  20260717_0024_card_evaluation_feedback.py  20260718_0025_evaluation_prompt_version.py  20260718_0026_drop_cardset_core.py  20260719_0027_deck_tags.py  20260719_0028_deck_oracle_score_cache.py  20260719_0029_user_scoring_setting.py  20260719_0030_tag_targets_and_weights.py
api/scripts/: __init__.py  benchmark_scores_indexes.py  judge_eval.py  judge_eval_deck.json  judge_eval_golden.json  judge_eval_program.json  judge_eval_results.json  judge_eval_snapshots.json  judge_gepa.py  restructure_backend.py
api/survail/: __init__.py  app.py  catalog.py  catalog_import.py  db.py  dependencies.py  devtools.py  embedding_backfill.py  main.py  models.py  schemas.py  security.py  settings.py  telemetry.py  types.py
api/survail/core/: config.py  db.py  dependencies.py  errors.py  models.py  schemas.py  security.py  telemetry.py  types.py
api/survail/deck_agent/: __init__.py  events.py  service.py
api/survail/domain/: __init__.py  deck_description.py  deck_description_service.py  deck_operations.py  decks.py  format_strategies.py  moxfield_import.py  printing_preferences.py  role_evaluation.py  semantic_search.py  validation_rules.py
api/survail/integrations/: cache.py  openai_descriptions.py  rate_limit.py  scryfall.py
api/survail/integrations/openai/: descriptions.py  imports.py  schemas.py
api/survail/integrations/scryfall/: client.py
api/survail/modules/agent/api/: router.py  schemas.py
api/survail/modules/agent/repository/: conversations.py
api/survail/modules/agent/service/: access.py  chat.py  events.py
api/survail/modules/auth/api/: router.py  schemas.py
api/survail/modules/auth/repository/: users.py
api/survail/modules/auth/service/: login.py
api/survail/modules/cards/api/: router.py  schemas.py
api/survail/modules/cards/repository/: cards.py
api/survail/modules/cards/service/: printings.py  search.py  semantic_search.py
api/survail/modules/decks/: contracts.py
api/survail/modules/decks/api/: router.py  schemas.py
api/survail/modules/decks/evaluations/: contracts.py  judge_reference_contracts.py
api/survail/modules/decks/evaluations/api/: annotations_router.py  annotations_schemas.py  judge_reference_router.py  judge_reference_schemas.py  router.py  schemas.py
api/survail/modules/decks/evaluations/service/: annotations.py  annotations_labels.py  annotations_metrics.py  dspy_program.py  evaluator.py  feedback.py  index_benchmark.py  judge_reference.py  role_rubrics.py  run.py
api/survail/modules/decks/guidance/: contracts.py
api/survail/modules/decks/guidance/api/: router.py  schemas.py
api/survail/modules/decks/guidance/repository/: proposals.py
api/survail/modules/decks/operations/: contracts.py
api/survail/modules/decks/repository/: decks.py
api/survail/modules/decks/service/: analytics.py  cardsets.py  context.py  describe.py  formats.py  manage.py  rules.py  samples.py  tags.py  validate.py
api/survail/modules/formats/api/: router.py
api/survail/modules/imports/api/: router.py  schemas.py
api/survail/modules/imports/service/: create.py  preview.py
api/survail/repositories/: __init__.py  agent.py  auth.py  decks.py
api/survail/routes/: agent.py  auth.py  cards.py  decks.py  evaluations.py  formats.py  imports.py
api/survail/services/: agent.py  auth.py  decks.py  evaluations.py  imports.py  sample_decks.py
api/tests/: test_agent_schemas.py  test_architecture_imports.py  test_benchmark_scores_indexes.py  test_card_search.py  test_catalog.py  test_commander_operations.py  test_deck_agent.py  test_deck_analytics.py  test_deck_deletion.py  test_deck_description.py  test_deck_tags.py  test_decks.py  test_embedding_backfill.py  test_evaluation_feedback.py  test_evaluations.py  test_judge_gepa.py  test_moxfield_import.py  test_openai_imports.py  test_operation_auto_scoring.py  test_rate_limit.py  test_role_annotation_portal.py  test_role_evaluation.py  test_route_layering.py  test_scryfall.py  test_security.py  test_semantic_search.py  test_settings.py  test_source_file_budgets.py  test_telemetry.py  test_user_settings.py
api/typings/ijson/: __init__.pyi
api/typings/pgvector/: __init__.pyi
api/typings/pgvector/sqlalchemy/: __init__.pyi
src/: app.py  (+2 more)
(+416 files in other folders)
