[project]
name = "mtg"
version = "0.1.0"
description = "MTG Deck Building Agent with LangGraph and Azure OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "deepagents>=0.2.8",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.49",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "psycopg[binary,pool]>=3.2.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "agentevals>=0.0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config"]
package-dir = {"" = "src"}
