[project]
name = "survail-api"
version = "0.1.0"
description = "Deck-building API for Survail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "dspy>=3.0.0",
    "fastapi>=0.115.0",
    "gepa>=0.0.25",
    "httpx>=0.28.0",
    "ijson>=3.4.0",
    "itsdangerous>=2.2.0",
    "openai-agents>=0.9.0",
    "openinference-instrumentation-openai-agents>=1.6.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.0",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-instrumentation-httpx>=0.63b0",
    "opentelemetry-instrumentation-redis>=0.63b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b0",
    "opentelemetry-sdk>=1.42.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
survail-backfill-embeddings = "survail.embedding_backfill:main"
survail-api-check = "survail.devtools:check"
survail-api-fix = "survail.devtools:fix"
survail-api-lint = "survail.devtools:lint"
survail-api-typecheck = "survail.devtools:typecheck"
survail-api-test = "survail.devtools:test"
survail-api-deps = "survail.devtools:deps"

[project.optional-dependencies]
dev = [
    "deptry>=0.23.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["survail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-q",
    "--strict-config",
    "--strict-markers",
    "--cov=survail",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "C4", "DTZ", "N", "PERF", "PIE", "PT", "RUF", "SIM", "T20", "TC006"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401", "RUF100"]
"survail/catalog_import.py" = ["T201"]
"survail/embedding_backfill.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
files = ["survail", "tests"]
mypy_path = "typings"
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
branch = true
source = ["survail"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
